Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/SwitchScope.out
SwitchScope.java:22:28: compiler.err.cant.resolve.location: kindname.class, Local, , , (compiler.misc.location: kindname.class, SwitchScope, null)
1 error
